--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   --primary :#ebddd0;
   --lightprimary : #f4ece1;
   --darkprimary : #ebddd0;
-  --heading : #7e5619;
+  --heading : #553300;
 }
 
 a {
