--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,7 @@ body {
   font-family: Georgia, "Times New Roman", Times, serif;
   text-transform: uppercase;
   letter-spacing: 0.6px;
+  z-index: 10;
 }
 
 .col {
